// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewTabLinkWithTooltip handles children 1`] = `
<StyledTooltipHostBase
  calloutProps={
    {
      "styles": {
        "beak": "insightsTooltip",
        "root": "insightsTooltip",
      },
    }
  }
  content="tooltip text"
  styles={
    {
      "root": "insightsTooltipHost",
    }
  }
>
  <NewTabLink
    className="insightsLink"
    href="test"
  >
    link text
  </NewTabLink>
</StyledTooltipHostBase>
`;

exports[`NewTabLinkWithTooltip renders with null tooltip content 1`] = `
<StyledTooltipHostBase
  calloutProps={
    {
      "styles": {
        "beak": "insightsTooltip",
        "root": "insightsTooltip",
      },
    }
  }
  styles={
    {
      "root": "insightsTooltipHost",
    }
  }
>
  <NewTabLink
    className="insightsLink"
    href="test"
  />
</StyledTooltipHostBase>
`;

exports[`NewTabLinkWithTooltip renders with tooltip content 1`] = `
<StyledTooltipHostBase
  calloutProps={
    {
      "styles": {
        "beak": "insightsTooltip",
        "root": "insightsTooltip",
      },
    }
  }
  content="tooltip text"
  styles={
    {
      "root": "insightsTooltipHost",
    }
  }
>
  <NewTabLink
    className="insightsLink"
    href="test"
  />
</StyledTooltipHostBase>
`;
